packages/rspack/tests/configCases/errors/rule-type-fatal-error/webpack.config.js
module.exports = {
	experiments: {
		rspackFuture: {
			disableTransformByDefault: true
		}
	}
};
